[tool.poetry]
name = "general_json2yolo"
version = "0.1.0"
description = ""
authors = ["Alex <alex@urbanmachine.build>", "Samuel <samuel@urbanmachine.build>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
